--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             </div>
 
             <!-- icon do carrinho do menu -->
-            <div class="col-1 text-center">
-                <img src="">
+            <div class="col-1 text-end">
+                <img src="img/shopping-cart.png" class="iconsmenu">
             </div>
 
             <!-- icon para conta do utilizador -->
             <div class="col-1 text-center">
-                <h6 class="menutitulo">Clothy</h6>
+                <img src="img/add-user.png" class="iconsmenu">
             </div>
         </div>         
       </nav>
