--- a/store.html
+++ b/store.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Women</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -11,13 +11,118 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/stylestore.css">
+
 </head>
 <body>
-    <input type="button" onclick="Filtrar()" value="Teste">
+    <!-- menu -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav nav-advanced">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Women</b></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Men</b></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><b>About us</b></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Contact</b></a>
+                </li>
+                <!-- para usar nas paginas em que o utilizador esta a navegar fora da home -->
+                <!-- <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                </li> -->
+                </ul>
+            </div>
+
+            <!-- icon do carrinho do menu -->
+            <div class="col-1 text-end">
+                <img src="img/shopping-cart.png" class="iconsmenu">
+            </div>
+
+            <!-- icon para conta do utilizador -->
+            <div class="col-1 text-center">
+                <img src="img/add-user.png" class="iconsmenu">
+            </div>
+        </div>         
+      </nav>
+
+      <img src="img/logo-icon.png" class="logo" alt="Logo">
+      <!-- banner -->
+      <br><div class="row">
+        <div class="container-fluid col-12 text-center">
+            <br>
+            <h1>RVS</h1>
+            <br>
+        </div>
+      </div>
+
+      <!-- pesquisa -->
+      <br>
+      <div class="row">
+        <div class="container-fluid col-10 searchstore text-end">
+            <br>
+                <p class="storefiltro">Filtrar por:</p>
+            <br>
+        </div>
+        <div class="container-fluid col-2 searchstore">
+            <br>
+            <form id="womensearch" method="post">
+                  <select id="selectmolher">
+                    <option id="15" value="all" class="optionselectstore">All</option>
+                    <option id="1" value="Sweaters" class="optionselectstore">Sweaters</option>
+                    <option id="2" value="T-Shirts" class="optionselectstore">T-Shirts</option>
+                    <option id="3" value="Pants" class="optionselectstore">Pants</option>
+                    <option id="4" value="Shoes" class="optionselectstore">Shoes</option>
+                    <option id="9" value="Sales" class="optionselectstore">Sales</option>
+                    <option id="11" value="Top Products" class="optionselectstore">Top Products</option>
+                    <option id="13" value="New Arrivals" class="optionselectstore">New Arrivals</option>
+                  </select>
+            </form>
+            <br>
+        </div>
+      </div>
+
+      <!-- conteudo -->
+      <div class="container-fluid row">
+>
+        <!-- div para adicionar o conteudo que esta em js -->
+        <div class="card-group col-10 divparacartoes" id="divmulheres"></div>
+
+      </div>
+
+
+        
+
+        <footer class="bg-dark text-white mt-5">
+            <hr>
+            <div class="socials-container">
+              <!-- Linkedin -->
+              <a class="socials-icon" href="https://www.linkedin.com/in/goncalo-szabo-rio/" target="_blank"
+                aria-hidden="true"><i class="fab fa-linkedin-in"></i></a>
+              <!-- Github -->
+              <a class="socials-icon" href="https://github.com/SzaboRIO/" target="_blank" aria-hidden="true"><i
+                  class="fab fa-github"></i></a>
+              <!-- Mail -->
+              <a class="socials-icon" href="mailto:goncaloszabo@gmail.com" target="_blank" aria-hidden="true"><i
+                  class="fa-regular fa-envelope"></i></a>
+            </div>
+            <!-- Footer description -->
+            <p class="text-center">&copy; 2025 RVS</p>
+          </footer>
 
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <!-- scripts de js -->
     <script src="js/script.js"></script>
     <script src="js/bd_js.js"></script>
 </body>
