--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RVS Clothing</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Font Awesome icons -->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body class="bodyindex">
     <!-- menu -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav nav-advanced">
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Women</b></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Men</b></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><b>About us</b></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><b>Contact</b></a>
-                </li>
-                <!-- para usar nas paginas em que o utilizador esta a navegar fora da home -->
-                <!-- <li class="nav-item">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav nav-advanced">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><b>Women</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><b>Men</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><b>About us</b></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><b>Contact</b></a>
+                    </li>
+                    <!-- para usar nas paginas em que o utilizador esta a navegar fora da home -->
+                    <!-- <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li> -->
                 </ul>
@@ -49,43 +56,84 @@
             <div class="col-1 text-center">
                 <img src="img/add-user.png" class="iconsmenu">
             </div>
-        </div>         
-      </nav>
+        </div>
+    </nav>
 
-      <img src="img/logo-icon.png" class="logo" alt="Logo">
+    
+<!-- Carrosel -->
+<div class="carousel">
+  <div class="carousel-inner">
+    <img src="img/slide 1.jpg" alt="Imagem 1">
+    <img src="img/slide 2.jpg" alt="Imagem 2">
+    <img src="img/slide 3.jpg" alt="Imagem 3">
+  </div>
+  <button class="prev">Anterior</button>
+  <button class="next">Próxima</button>
+</div>
 
-          <section class="featured py-5">
+<img src="img/logo-icon.png" class="logo" alt="Logo">
+
+    <section class="featured py-5">
         <div class="container text-center">
-        <div class="row g-4">
-        <div class="col-md-4"><div class="card"><img src="img/New Arrival.jpg" class="card-img-top" alt="New Arrivals"><div class="card-body"><h5 class="card-title">New Arrival</h5><a href="#" class="btn btn-primary">Shop Now</a></div></div></div>
-        <div class="col-md-4"><div class="card"><img src="img/Sale.jpg" class="card-img-top" alt="Sale"><div class="card-body"><h5 class="card-title">Sales</h5><a href="#" class="btn btn-primary">Shop Now</a></div></div></div>
-        <div class="col-md-4"><div class="card"><img src="img/Top Products.jpg" class="card-img-top" alt="Top Products"><div class="card-body"><h5 class="card-title">Top Products</h5><a href="#" class="btn btn-primary">Shop Now</a></div></div></div>
-        </div>
-        </div>
-        </section>
-
-        <footer class="bg-dark text-white mt-5">
-            <hr>
-            <div class="socials-container">
-              <!-- Linkedin -->
-              <a class="socials-icon" href="https://www.linkedin.com/in/goncalo-szabo-rio/" target="_blank"
-                aria-hidden="true"><i class="fab fa-linkedin-in"></i></a>
-              <!-- Github -->
-              <a class="socials-icon" href="https://github.com/SzaboRIO/" target="_blank" aria-hidden="true"><i
-                  class="fab fa-github"></i></a>
-              <!-- Mail -->
-              <a class="socials-icon" href="mailto:goncaloszabo@gmail.com" target="_blank" aria-hidden="true"><i
-                  class="fa-regular fa-envelope"></i></a>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card"><img src="img/New Arrival.jpg" class="card-img-top" alt="New Arrivals">
+                        <div class="card-body">
+                            <h5 class="card-title">New Arrivals</h5><a href="#" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card"><img src="img/Sale.jpg" class="card-img-top" alt="Sale">
+                        <div class="card-body">
+                            <h5 class="card-title">Sales</h5><a href="#" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card"><img src="img/Top Products.jpg" class="card-img-top" alt="Top Products">
+                        <div class="card-body">
+                            <h5 class="card-title">Top Products</h5><a href="#" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- Footer description -->
-            <p class="text-center">&copy; 2025 RVS</p>
-          </footer>
+        </div>
+    </section>
+
+    <footer class="bg-dark text-white mt-5">
+        <hr>
+        <div class="socials-container">
+            <!-- Facebook -->
+            <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank" aria-hidden="true"><i
+                    class="fa-brands fa-facebook"></i></a>
+
+            <!-- Instagram -->
+            <a class="socials-icon" href="https://www.instagram.com/cesae.digital/" target="_blank"
+                aria-hidden="true"><i class="fa-brands fa-instagram"></i></a>
+
+            <!-- Tiktok -->
+            <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank" aria-hidden="true"><i
+                    class="fa-brands fa-tiktok"></i></a>
+
+            <!-- Mail -->
+            <a class="socials-icon" href="mailto:geral@rvs.com" target="_blank" aria-hidden="true"><i
+                    class="fa-regular fa-envelope"></i></a>
+        </div>
+
+        <!-- Footer description -->
+        <p class="text-center">&copy; 2025 RVS Clothing</p>
+    </footer>
 
     <!-- Bootstrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <!-- scripts de js -->
     <script src="js/script.js"></script>
     <script src="js/bd_js.js"></script>
+    <script src="js/carrosel.js"></script>
 </body>
+
 </html>
