--- a/store.html
+++ b/store.html
@@ -62,8 +62,8 @@
     <img src="img/logo-icon.png" class="logo" alt="Logo">
     <!-- banner -->
     <br>
-    <div class="row">
-        <div class="container-fluid col-12 text-center">
+    <div class="row container-fluid">
+        <div class="col-12 text-center">
             <br>
             <h1>RVS</h1>
             <br>
@@ -72,37 +72,30 @@
 
     <!-- pesquisa -->
     <br>
-    <div class="row">
-        <div class="container-fluid col-10 searchstore text-end">
+    <div class="row container-fluid">
+        <div class="col-9"></div>
+        <div class="col-2 searchstore text-end">
             <br>
-            <p class="storefiltro">Filtrar por:</p>
-            <br>
-        </div>
-        <div class="container-fluid col-2 searchstore">
-            <br>
-            <form id="womensearch" method="post">
-                <select id="selectmolher">
-                    <option id="15" value="all" class="optionselectstore">All</option>
-                    <option id="1" value="Sweaters" class="optionselectstore">Sweaters</option>
-                    <option id="2" value="T-Shirts" class="optionselectstore">T-Shirts</option>
-                    <option id="3" value="Pants" class="optionselectstore">Pants</option>
-                    <option id="4" value="Shoes" class="optionselectstore">Shoes</option>
-                    <option id="9" value="Sales" class="optionselectstore">Sales</option>
-                    <option id="11" value="Top Products" class="optionselectstore">Top Products</option>
-                    <option id="13" value="New Arrivals" class="optionselectstore">New Arrivals</option>
-                </select>
-            </form>
+                <!-- teste -->
+                <div class="d-grid gap-2 d-md-flex justify-content-md-center labelsearchstore">
+                    <p class="storefiltro">Filtrar por:</p>
+                    <form id="womensearch" method="post">
+                        <select id="selectmulher" class="seletorDeCategoria">
+                            <option id="15" value="15" class="optionselectstore">All</option>
+                            <option id="1" value="1" class="optionselectstore">Sweaters</option>
+                            <option id="2" value="2" class="optionselectstore">T-Shirts</option>
+                            <option id="3" value="3" class="optionselectstore">Pants</option>
+                            <option id="4" value="4" class="optionselectstore">Shoes</option>
+                        </select>
+                    </form>
+                </div>
             <br>
         </div>
     </div>
+    
 
-    <!-- conteudo -->
-    <div class="container-fluid row">
-        >
-        <!-- div para adicionar o conteudo que esta em js -->
-        <div class="card-group col-10 divparacartoes" id="divmulheres"></div>
-
-    </div>
+    <!-- div para adicionar o conteudo que esta em js -->
+    <div class="row divdastore" id="divmulheres"></div>
 
 
 
