--- a/index.html
+++ b/index.html
@@ -29,71 +29,87 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav nav-advanced">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><b>Women</b></a>
+                        <a class="nav-link" href="women.html"><b>Women</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><b>Men</b></a>
+                        <a class="nav-link" href="men.html"><b>Men</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><b>About us</b></a>
+                        <a class="nav-link" href="about us.html"><b>About us</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><b>Contact</b></a>
+                        <a class="nav-link" href="contact.html"><b>Contact</b></a>
                     </li>
-                    <!-- para usar nas paginas em que o utilizador esta a navegar fora da home -->
-                    <!-- <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                </li> -->
                 </ul>
             </div>
 
             <!-- icon do carrinho do menu -->
             <div class="col-1 text-end">
-                <img src="img/shopping-cart.png" class="iconsmenu">
+                <a href="shopping cart.html"><img src="img/shopping-cart.png" class="iconsmenu"></a>
             </div>
 
             <!-- icon para conta do utilizador -->
             <div class="col-1 text-center">
-                <img src="img/add-user.png" class="iconsmenu">
+                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu"></a>
             </div>
         </div>
     </nav>
 
-    
-<!-- Carrosel -->
-<div class="carousel">
-  <div class="carousel-inner">
-    <img src="img/slide 1.jpg" alt="Imagem 1">
-    <img src="img/slide 2.jpg" alt="Imagem 2">
-    <img src="img/slide 3.jpg" alt="Imagem 3">
-  </div>
-  <button class="prev">Anterior</button>
-  <button class="next">Próxima</button>
-</div>
+    <br>
 
-<img src="img/logo-icon.png" class="logo" alt="Logo">
+    <!-- Banner GIF -->
+    <div class="container">
+        <a href="sale.html"><img src="img/Design sem nome (3).gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
+    </div>
+
+    <!-- Carrossel -->
+    <div class="container rounded-container carousel-container">
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/Design sem nome.jpg" class="d-block w-100" alt="Slide 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/Design sem nome 2.jpg" class="d-block w-100" alt="Slide 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/Design sem nome 3.jpg" class="d-block w-100" alt="Slide 3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <img src="img/logo-icon.png" class="logo" alt="Logo">
 
     <section class="featured py-5">
         <div class="container text-center">
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card"><img src="img/New Arrival.jpg" class="card-img-top" alt="New Arrivals">
+                    <div class="card"><img src="img/categoria 1.gif" class="card-img-top" alt="New Arrivals">
                         <div class="card-body">
-                            <h5 class="card-title">New Arrivals</h5><a href="#" class="btn btn-primary">Shop Now</a>
+                            <a href="#" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card"><img src="img/Sale.jpg" class="card-img-top" alt="Sale">
+                    <div class="card"><img src="img/categoria 2.gif" class="card-img-top" alt="Sale">
                         <div class="card-body">
-                            <h5 class="card-title">Sales</h5><a href="#" class="btn btn-primary">Shop Now</a>
+                            <a href="#" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card"><img src="img/Top Products.jpg" class="card-img-top" alt="Top Products">
+                    <div class="card"><img src="img/categoria 3.gif" class="card-img-top" alt="Top Products">
                         <div class="card-body">
-                            <h5 class="card-title">Top Products</h5><a href="#" class="btn btn-primary">Shop Now</a>
+                            <a href="#" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -104,24 +120,14 @@
     <footer class="bg-dark text-white mt-5">
         <hr>
         <div class="socials-container">
-            <!-- Facebook -->
-            <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank" aria-hidden="true"><i
+            <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
                     class="fa-brands fa-facebook"></i></a>
-
-            <!-- Instagram -->
-            <a class="socials-icon" href="https://www.instagram.com/cesae.digital/" target="_blank"
-                aria-hidden="true"><i class="fa-brands fa-instagram"></i></a>
-
-            <!-- Tiktok -->
-            <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank" aria-hidden="true"><i
+            <a class="socials-icon" href="https://www.instagram.com/cesae.digital/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank"><i
                     class="fa-brands fa-tiktok"></i></a>
-
-            <!-- Mail -->
-            <a class="socials-icon" href="mailto:geral@rvs.com" target="_blank" aria-hidden="true"><i
-                    class="fa-regular fa-envelope"></i></a>
+            <a class="socials-icon" href="mailto:geral@rvs.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
         </div>
-
-        <!-- Footer description -->
         <p class="text-center">&copy; 2025 RVS Clothing</p>
     </footer>
 
@@ -129,11 +135,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-    <!-- scripts de js -->
-    <script src="js/script.js"></script>
-    <script src="js/bd_js.js"></script>
-    <script src="js/carrosel.js"></script>
 </body>
 
 </html>
