--- a/cart.html
+++ b/cart.html
@@ -64,7 +64,7 @@
     <br>
 
     <!-- div para adicionar o conteudo que esta em js -->
-    <div class="col-10 cart-div-col-10 text-center">
+    <div class="cart-div-col text-center">
         <h1 class="h1-titulo-cart" >Shoping Cart</h1>
         <div class="container-fluid" id="divcart"></div>
         <div class="col-6 div-price-cart">
