--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/Design sem nome.jpg" class="d-block w-100" alt="Slide 1">
+                    <a href="newarrivals.html"><img src="img/Design sem nome.jpg" class="d-block w-100" alt="Slide 1"></a>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Design sem nome 2.jpg" class="d-block w-100" alt="Slide 2">
+                    <a href="sale.html"><img src="img/Design sem nome 2.jpg" class="d-block w-100" alt="Slide 2"></a>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/Design sem nome 3.jpg" class="d-block w-100" alt="Slide 3">
+                    <a href="topproducts.html"><img src="img/Design sem nome 3.jpg" class="d-block w-100" alt="Slide 3"></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -87,29 +87,29 @@
         </div>
     </div>
 
-    <img src="img/logo-icon.png" class="logo" alt="Logo">
+    <a href="index.html"><img src="img/logo-icon.png" class="logo" alt="Logo"></a>
 
     <section class="featured py-5">
         <div class="container text-center">
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card"><img src="img/categoria 1.gif" class="card-img-top" alt="New Arrivals">
+                    <div class="card"></a><img src="img/categoria 1.gif" class="card-img-top" alt="New Arrivals">
                         <div class="card-body">
-                            <a href="#" class="btn btn-dark">Shop Now</a>
+                            <a href="newarrivals.html" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card"><img src="img/categoria 2.gif" class="card-img-top" alt="Sale">
+                    <div class="card"></a><img src="img/categoria 2.gif" class="card-img-top" alt="Sale">
                         <div class="card-body">
-                            <a href="#" class="btn btn-dark">Shop Now</a>
+                            <a href="sale.html" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card"><img src="img/categoria 3.gif" class="card-img-top" alt="Top Products">
+                    <div class="card"></a><img src="img/categoria 3.gif" class="card-img-top" alt="Top Products">
                         <div class="card-body">
-                            <a href="#" class="btn btn-dark">Shop Now</a>
+                            <a href="topproducts.html" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
