--- a/cart.html
+++ b/cart.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="index.html"><b>Home</b></a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="women.html"><b>Women</b></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="men.html"><b>Men</b></a>
                     </li>
                     <li class="nav-item">
@@ -42,11 +45,14 @@
                 </ul>
             </div>
 
-            
-
+            <!-- icon do carrinho do menu -->
+            <div class="col-1 text-end">
+                <a href="cart.html" ><img src="img/shopping-cart.png" class="iconsmenu cart-label-img"></a>
+                <p class="cart-label-text" id="cart-label-text"></p>
+            </div>
             <!-- icon para conta do utilizador -->
             <div class="col-1 text-center">
-                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu"></a>
+                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu icon-util-posi"></a>
             </div>
         </div>
     </nav>
