--- a/women.html
+++ b/women.html
@@ -47,12 +47,12 @@
 
             <!-- icon do carrinho do menu -->
             <div class="col-1 text-end">
-                <a href="cart.html"><img src="img/shopping-cart.png" class="iconsmenu"></a>
+                <a href="cart.html" ><img src="img/shopping-cart.png" class="iconsmenu cart-label-img"></a>
+                <p class="cart-label-text" id="cart-label-text"></p>
             </div>
-
             <!-- icon para conta do utilizador -->
             <div class="col-1 text-center">
-                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu"></a>
+                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu icon-util-posi"></a>
             </div>
         </div>
     </nav>
