last day commits

--- a/about us.html
+++ b/about us.html
@@ -12,6 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/modal.css">
 
     <!-- Font Awesome icons -->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -65,28 +66,17 @@
         <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
     </div>
 
-    <!-- Carrossel -->
-    <div class="container rounded-container carousel-container">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <a href="newarrivals.html"><img src="img/Design sem nome.jpg" class="d-block w-100" alt="Slide 1"></a>
-                </div>
-                <div class="carousel-item">
-                    <a href="sale.html"><img src="img/Design sem nome 2.jpg" class="d-block w-100" alt="Slide 2"></a>
-                </div>
-                <div class="carousel-item">
-                    <a href="topproducts.html"><img src="img/Design sem nome 3.jpg" class="d-block w-100" alt="Slide 3"></a>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <!-- About Us Section -->
+    <div class="container">
+        <div class="about-us-section">
+            <h2 class="about-us-title">About Us</h2>
+            <br>
+            <p class="about-us-text">RVS is more than just a clothing brand. It’s the result of friendship, determination, and a passion for creativity.</p>
+            <p class="about-us-text">Founded by three friends, Gonçalo Rio, Ana Vale and Licínio Sousa, who met during a software development course, RVS reflects the perfect blend of innovation and fashion.</p>
+            <p class="about-us-text">The name RVS comes from the first letters of our founders' last names: Rio, Vale and Sousa, a testament to the bond that brought this vision to life. What began as an idea shared between friends has grown into a brand dedicated to offering stylish, high-quality clothing for those who value individuality and self-expression.</p>
+            <p class="about-us-text">At RVS, we are inspired by the intersection of technology and design, bringing the same attention to detail and problem-solving mindset we learned as developers into the fashion world. Every collection we create is designed to be modern, versatile, and timeless, with a focus on quality and sustainability.</p>
+            <p class="about-us-text">We believe that clothing should empower you to be your best self. Whether you’re dressing for work, play, or something in between, RVS has something for every moment.</p>
+            <p class="about-us-text">Welcome to RVS—where friendship and innovation come together to redefine fashion.</p>    
         </div>
     </div>
 
@@ -94,23 +84,20 @@
         <div class="container text-center">
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 1.gif" class="card-img-top" alt="New Arrivals">
+                    <div class="card"></a><img src="img/rio.jpg" class="card-img-top" alt="rio">
                         <div class="card-body">
-                            <a href="newarrivals.html" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 2.gif" class="card-img-top" alt="Sale">
+                    <div class="card"></a><img src="img/vale.jpg" class="card-img-top" alt="vale">
                         <div class="card-body">
-                            <a href="sale.html" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 3.gif" class="card-img-top" alt="Top Products">
+                    <div class="card"></a><img src="img/sousa.jpg" class="card-img-top" alt="sousa">
                         <div class="card-body">
-                            <a href="topproducts.html" class="btn btn-dark">Shop Now</a>
                         </div>
                     </div>
                 </div>
