--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/modal.css">
 
     <!-- Font Awesome icons -->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -65,58 +66,52 @@
         <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
     </div>
 
-    <!-- Carrossel -->
-    <div class="container rounded-container carousel-container">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <a href="newarrivals.html"><img src="img/Design sem nome.jpg" class="d-block w-100" alt="Slide 1"></a>
-                </div>
-                <div class="carousel-item">
-                    <a href="sale.html"><img src="img/Design sem nome 2.jpg" class="d-block w-100" alt="Slide 2"></a>
-                </div>
-                <div class="carousel-item">
-                    <a href="topproducts.html"><img src="img/Design sem nome 3.jpg" class="d-block w-100" alt="Slide 3"></a>
-                </div>
+    <!-- Contact form -->
+    <div class="container">
+        <div class="about-us-section">
+            <h2 class="about-us-title">Use our form</h2>
+    <section class="container mt-5">
+        <form id="contact-form" class="form-horizontal" action="sucess.html" method="get">
+          <div class="form-group">
+            <label for="nome" class="col-sm-2 control-label">Name:</label>
+            <div class="col-sm-10">
+              <input type="text" id="nome" name="nome" required class="form-control" placeholder="John Doe">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+          </div>
+          <div class="form-group">
+            <label for="email" class="col-sm-2 control-label">E-mail:</label>
+            <div class="col-sm-10">
+              <input type="email" id="email" name="email" required class="form-control"
+                placeholder="john.doe@example.com">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="mensagem" class="col-sm-2 control-label">Message:</label>
+            <div class="col-sm-10">
+              <textarea id="mensagem" name="mensagem" required class="form-control"
+                placeholder="Type your message here..."></textarea>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10 mt-4">
+              <button type="submit" class="btn btn-primary">Send</button>
+            </div>
+          </div>
+        </form>
+      </section>  
         </div>
     </div>
 
-    <section class="featured py-5">
-        <div class="container text-center">
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 1.gif" class="card-img-top" alt="New Arrivals">
-                        <div class="card-body">
-                            <a href="newarrivals.html" class="btn btn-dark">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 2.gif" class="card-img-top" alt="Sale">
-                        <div class="card-body">
-                            <a href="sale.html" class="btn btn-dark">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 3.gif" class="card-img-top" alt="Top Products">
-                        <div class="card-body">
-                            <a href="topproducts.html" class="btn btn-dark">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
+        <!-- other contact methods -->
+        <div class="container">
+            <div class="about-us-section">
+                <h2 class="about-us-title">or try one of these contact methods</h2>
+                <br>
+                <p class="about-us-text"><strong>E-mail:</strong> <a href="mailto:geral@rvs.com">geral@rvs.com</a></p>
+                <p class="about-us-text"><strong>Phone Number:</strong> 226 195 200</p>
+                <p class="about-us-text"><strong>Adress:</strong> Ciríaco Cardoso Street 186, 4150-212 Porto</p>    
             </div>
         </div>
-    </section>
 
     <footer class="bg-dark text-white mt-5">
         <hr>
