--- a/sucess.html
+++ b/sucess.html
@@ -12,6 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/modal.css">
 
     <!-- Font Awesome icons -->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -65,58 +66,15 @@
         <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
     </div>
 
-    <!-- Carrossel -->
-    <div class="container rounded-container carousel-container">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <a href="newarrivals.html"><img src="img/Design sem nome.jpg" class="d-block w-100" alt="Slide 1"></a>
-                </div>
-                <div class="carousel-item">
-                    <a href="sale.html"><img src="img/Design sem nome 2.jpg" class="d-block w-100" alt="Slide 2"></a>
-                </div>
-                <div class="carousel-item">
-                    <a href="topproducts.html"><img src="img/Design sem nome 3.jpg" class="d-block w-100" alt="Slide 3"></a>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        <!-- Toast -->
+        <div class="container mt-5 text-center">
+          <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading">Message Sent!</h4>
+            <p>Your message has been sent successfully. We will get back to you shortly.</p>
+            <hr>
+            <a href="index.html" class="btn btn-primary">Go Back</a>
+          </div>
         </div>
-    </div>
-
-    <section class="featured py-5">
-        <div class="container text-center">
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 1.gif" class="card-img-top" alt="New Arrivals">
-                        <div class="card-body">
-                            <a href="newarrivals.html" class="btn btn-dark">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 2.gif" class="card-img-top" alt="Sale">
-                        <div class="card-body">
-                            <a href="sale.html" class="btn btn-dark">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card"></a><img src="img/categoria 3.gif" class="card-img-top" alt="Top Products">
-                        <div class="card-body">
-                            <a href="topproducts.html" class="btn btn-dark">Shop Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <footer class="bg-dark text-white mt-5">
         <hr>
