parece que esta tudo direito

--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
                 <p class="cart-label-text" id="cart-label-text"></p>
             </div>
             <!-- icon para conta do utilizador -->
-            <div class="col-1 text-center">
+            <div class="col-2 text-center" id="UserName">
                 <a href="user.html"><img src="img/add-user.png"  class="iconsmenu icon-util-posi"></a>
             </div>
         </div>
@@ -61,7 +61,7 @@
 
     <!-- Banner GIF -->
     <div class="container">
-        <a href="sale.html"><img src="img/Design sem nome (3).gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
+        <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
     </div>
     <br>
 
@@ -95,7 +95,7 @@
 
 
 
-    <footer class="bg-dark text-white mt-5">
+    <footer class="bg-dark text-white mt-5 fixed-bottom">
         <hr>
         <div class="socials-container">
             <!-- Linkedin -->
@@ -119,6 +119,8 @@
 
     <!-- scripts de js -->
     <script src="js/cart.js"></script>
+    <script src="js/userinfo.js"></script>
+
     <script src="js/bd_js.js"></script>
 </body>
 
