--- a/women.html
+++ b/women.html
@@ -11,9 +11,10 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/stylestore.css">
     <link rel="stylesheet" href="css/modal.css">
+    
 
 </head>
 
@@ -51,7 +52,7 @@
                 <p class="cart-label-text" id="cart-label-text"></p>
             </div>
             <!-- icon para conta do utilizador -->
-            <div class="col-1 text-center">
+            <div class="col-2 text-center" id="UserName">
                 <a href="user.html"><img src="img/add-user.png"  class="iconsmenu icon-util-posi"></a>
             </div>
         </div>
@@ -61,7 +62,7 @@
 
     <!-- Banner GIF -->
     <div class="container">
-        <a href="sale.html"><img src="img/Design sem nome (3).gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
+        <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
     </div>
     <br>
 
@@ -156,7 +157,8 @@
 
     <!-- scripts de js -->
     <script src="js/script.js"></script>
-    <script src="js/bd_js.js"></script>
+    <script src="js/bd_js.js"></script>   
+    <script src="js/userinfo.js"></script>
 </body>
 
 </html>
