--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/stylestore.css">
 
     <!-- Font Awesome icons -->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -30,6 +31,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav nav-advanced">
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html"><b>Home</b></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="women.html"><b>Women</b></a>
                     </li>
                     <li class="nav-item">
@@ -39,19 +43,19 @@
                         <a class="nav-link" href="about us.html"><b>About us</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html"><b>Contact</b></a>
+                        <a class="nav-link disabled"><b>Contact</b></a>
                     </li>
                 </ul>
             </div>
 
             <!-- icon do carrinho do menu -->
             <div class="col-1 text-end">
-                <a href="shopping cart.html"><img src="img/shopping-cart.png" class="iconsmenu"></a>
+                <a href="cart.html" ><img src="img/shopping-cart.png" class="iconsmenu cart-label-img"></a>
+                <p class="cart-label-text" id="cart-label-text"></p>
             </div>
-
             <!-- icon para conta do utilizador -->
-            <div class="col-1 text-center">
-                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu"></a>
+            <div class="col-2 text-center" id="UserName">
+                <a href="user.html"><img src="img/add-user.png"  class="iconsmenu icon-util-posi"></a>
             </div>
         </div>
     </nav>
@@ -131,6 +135,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/userinfo.js"></script>
 </body>
 
 </html>
