--- a/men.html
+++ b/men.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Women</title>
+    <title>Men</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/stylestore.css">
     <link rel="stylesheet" href="css/modal.css">
+    
 
 </head>
 
@@ -51,7 +51,7 @@
                 <p class="cart-label-text" id="cart-label-text"></p>
             </div>
             <!-- icon para conta do utilizador -->
-            <div class="col-1 text-center">
+            <div class="col-2 text-center" id="UserName">
                 <a href="user.html"><img src="img/add-user.png"  class="iconsmenu icon-util-posi"></a>
             </div>
         </div>
@@ -61,7 +61,7 @@
 
     <!-- Banner GIF -->
     <div class="container">
-        <a href="sale.html"><img src="img/Design sem nome (3).gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
+        <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
     </div>
     <br>
 
@@ -135,18 +135,15 @@
     <footer class="bg-dark text-white mt-5">
         <hr>
         <div class="socials-container">
-            <!-- Linkedin -->
-            <a class="socials-icon" href="https://www.linkedin.com/in/goncalo-szabo-rio/" target="_blank"
-                aria-hidden="true"><i class="fab fa-linkedin-in"></i></a>
-            <!-- Github -->
-            <a class="socials-icon" href="https://github.com/SzaboRIO/" target="_blank" aria-hidden="true"><i
-                    class="fab fa-github"></i></a>
-            <!-- Mail -->
-            <a class="socials-icon" href="mailto:goncaloszabo@gmail.com" target="_blank" aria-hidden="true"><i
-                    class="fa-regular fa-envelope"></i></a>
+            <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a class="socials-icon" href="https://www.instagram.com/cesae.digital/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank"><i
+                    class="fa-brands fa-tiktok"></i></a>
+            <a class="socials-icon" href="mailto:geral@rvs.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
         </div>
-        <!-- Footer description -->
-        <p class="text-center">&copy; 2025 RVS</p>
+        <p class="text-center">&copy; 2025 RVS Clothing</p>
     </footer>
 
     <!-- Bootstrap script -->
@@ -157,6 +154,7 @@
     <!-- scripts de js -->
     <script src="js/script.js"></script>
     <script src="js/bd_js.js"></script>
+    <script src="js/userinfo.js"></script>
 </body>
 
 </html>
