--- a/user.html
+++ b/user.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body onload="IsUserLogin()">
     <!-- menu -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
