--- a/user.html
+++ b/user.html
@@ -101,7 +101,7 @@
 
 
 
-    <footer class="bg-dark text-white mt-5 fixed-bottom">
+    <footer class="bg-dark text-white mt-5">
         <hr>
         <div class="socials-container">
             <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
