--- a/user.html
+++ b/user.html
@@ -62,39 +62,43 @@
 
     <br>
 
-    <!-- Banner GIF -->
-    <div class="container">
-        <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
-    </div>
-    <br>
+    <div class="content">
 
-    <!-- logo -->
-    <img src="img/logo-icon.png" class="logo" alt="Logo">
-    <br>
+        <!-- Banner GIF -->
+        <div class="container">
+            <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
+        </div>
+        <br>
 
-    <!-- conteudo para login ou registo -->
-    <div class="col-10 div-form-login text-center">
-        <div class="text-center form-login ">
-            <form id="LoginForm">
-                <div class="mb-3">
-                    <input type="text" class="form-control" id="InputName" placeholder="Name">
-                    <label class="text-start" id="LabelName" style="color: red;"></label>
-                </div>
-                <div class="mb-3">
-                    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Email">
-                    <label class="text-start" id="LabelEmail" style="color: red;"></label>
-                </div>
-                <div class="mb-3">
-                    <input type="password" class="form-control" id="InputPassword" placeholder="Password">
-                    <label class="text-start" id="LabelPass" style="color: red;"></label>
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="Check1"  >
-                    <label class="form-check-label" for="Check1">By logging in, I declare that I have read and accept the Terms and Conditions, and the use of my personal data as explained in the Privacy Policy.</label>
-                    <label class="text-start" id="Labelcheck" style="color: red;"></label>
-                </div>
-                <button type="submit" class="btn btn-primary" onclick="Login()">LOGIN</button>
-                </form>
+        <!-- logo -->
+        <img src="img/logo-icon.png" class="logo" alt="Logo">
+        <br>
+
+        <!-- conteudo para login ou registo -->
+        <div class="col-10 div-form-login text-center">
+            <div class="text-center form-login ">
+                <form id="LoginForm">
+                    <div class="mb-3">
+                        <input type="text" class="form-control" id="InputName" placeholder="Name">
+                        <label class="text-start" id="LabelName" style="color: red;"></label>
+                    </div>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Email">
+                        <label class="text-start" id="LabelEmail" style="color: red;"></label>
+                    </div>
+                    <div class="mb-3">
+                        <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+                        <label class="text-start" id="LabelPass" style="color: red;"></label>
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="Check1"  >
+                        <label class="form-check-label" for="Check1">By logging in, I declare that I have read and accept the Terms and Conditions, and the use of my personal data as explained in the Privacy Policy.</label>
+                        <label class="text-start" id="Labelcheck" style="color: red;"></label>
+                    </div>
+                    <button type="submit" class="btn btn-primary" onclick="Login()">LOGIN</button>
+                    </form>
+            </div>
+
         </div>
 
     </div>
@@ -102,7 +106,7 @@
 
 
     <footer class="bg-dark text-white mt-5">
-        <hr>
+        <br>
         <div class="socials-container">
             <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
                     class="fa-brands fa-facebook"></i></a>
