--- a/logout.html
+++ b/logout.html
@@ -21,6 +21,7 @@
 </head>
 
 <body onload="ChangeCartLabellogout()">
+    
     <!-- menu -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -62,48 +63,54 @@
 
     <br>
 
-    <!-- Banner GIF -->
-    <div class="container">
-        <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
-    </div>
-    <br>
 
-    <!-- logo -->
-    <img src="img/logo-icon.png" class="logo" alt="Logo">
-    <br>
 
-    <!-- conteudo para logout ou registo -->
-    <div class="container">
-        <div class="about-us-section">
-            <h2 class="about-us-title">User Information</h2>
-    <section class="container mt-5">
-        <form id="contact-form" class="form-horizontal">
-          <div class="form-group">
-            <label for="nome" class="col-sm-2 control-label">Name:</label>
-            <div class="col-sm-10">
-              <input type="text" id="nome" name="nome" class="form-control" disabled>
+
+    <div class="content">
+        
+
+        <!-- Banner GIF -->
+        <div class="container">
+            <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
+        </div>
+        <br>
+
+        <!-- logo -->
+        <img src="img/logo-icon.png" class="logo" alt="Logo">
+        <br>
+
+        <!-- conteudo para logout ou registo -->
+        <div class="container">
+            <div class="about-us-section">
+                <h2 class="about-us-title">User Information</h2>
+        <section class="container mt-5">
+            <form id="contact-form" class="form-horizontal">
+            <div class="form-group">
+                <label for="nome" class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                <input type="text" id="nome" name="nome" class="form-control" disabled>
+                </div>
             </div>
-          </div>
-          <div class="form-group">
-            <label for="email" class="col-sm-2 control-label">E-mail:</label>
-            <div class="col-sm-10">
-              <input type="email" id="email" name="email" class="form-control" disabled>
+            <div class="form-group">
+                <label for="email" class="col-sm-2 control-label">E-mail:</label>
+                <div class="col-sm-10">
+                <input type="email" id="email" name="email" class="form-control" disabled>
+                </div>
             </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10 mt-4">
-              <input type="button" class="btn btn-primary" id="logout-btt" onclick="LogOut()" value="LogOut"></input>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10 mt-4">
+                <input type="button" class="btn btn-primary" id="logout-btt" onclick="LogOut()" value="LogOut"></input>
+                </div>
             </div>
-          </div>
-        </form>
-      </section>  
+            </form>
+        </section>  
+            </div>
         </div>
     </div>
 
 
-
-    <footer class="bg-dark text-white mt-5 fixed-bottom">
-        <hr>
+    <footer class="bg-dark text-white mt-5">
+        <br>
         <div class="socials-container">
             <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
                     class="fa-brands fa-facebook"></i></a>
