--- a/sucess.html
+++ b/sucess.html
@@ -57,28 +57,34 @@
         </div>
     </nav>
 
-    <!-- Logo com posição absoluto non clicable para nao interferir com a navbar quando esta fica responsiva -->
-    <img src="img/logo-icon.png" class="logo" alt="Logo"></a>    
+    
+    <div class="content">
 
-    <br>
+        <!-- Logo com posição absoluto non clicable para nao interferir com a navbar quando esta fica responsiva -->
+        <img src="img/logo-icon.png" class="logo" alt="Logo"></a>    
 
-    <!-- Banner GIF -->
-    <div class="container">
-        <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
-    </div>
+        <br>
 
-        <!-- Toast -->
-        <div class="container mt-5 text-center">
-          <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">Message Sent!</h4>
-            <p>Your message has been sent successfully. We will get back to you shortly.</p>
-            <hr>
-            <a href="index.html" class="btn btn-primary">Go Back</a>
-          </div>
+        <!-- Banner GIF -->
+        <div class="container">
+            <a href="sale.html"><img src="img/Banner final.gif" alt="Promotional Banner" class="img-fluid banner-gif rounded-banner"></a>
         </div>
 
+            <!-- Toast -->
+            <div class="container mt-5 text-center">
+            <div class="alert alert-success" role="alert">
+                <h4 class="alert-heading">Message Sent!</h4>
+                <p>Your message has been sent successfully. We will get back to you shortly.</p>
+                <hr>
+                <a href="index.html" class="btn btn-primary">Go Back</a>
+            </div>
+            </div>
+
+    </div>
+
+
     <footer class="bg-dark text-white mt-5 fixed-bottom">
-        <hr>
+        <br>
         <div class="socials-container">
             <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
                     class="fa-brands fa-facebook"></i></a>
