header feito e new,top,sales page done

--- a/about us.html
+++ b/about us.html
@@ -22,7 +22,7 @@
 
 <body class="bodyindex">
     <!-- menu -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
     </nav>
 
     <!-- Logo com posição absoluto non clicable para nao interferir com a navbar quando esta fica responsiva -->
-    <img src="img/logo-icon.png" class="logo" alt="Logo"></a>    
+    <img src="img/logo-icon.png" class="logo fixed-top" alt="Logo"></a>    
 
     <br>
 
