--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- menu -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
         </div>
     </nav>
 
-    <br>
+
 
     <div class="content">
         <!-- Banner GIF -->
@@ -69,7 +69,7 @@
     <br>
 
     <!-- logo -->
-    <img src="img/logo-icon.png" class="logo" alt="Logo">
+    <img src="img/logo-icon.png" class="logo fixed-top" alt="Logo">
     <br>
 
     <!-- div para adicionar o conteudo que esta em js -->
