--- a/user.html
+++ b/user.html
@@ -22,7 +22,7 @@
 
 <body onload="IsUserLogin()">
     <!-- menu -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,8 +60,6 @@
         </div>
     </nav>
 
-    <br>
-
     <div class="content">
 
         <!-- Banner GIF -->
@@ -71,7 +69,7 @@
         <br>
 
         <!-- logo -->
-        <img src="img/logo-icon.png" class="logo" alt="Logo">
+        <img src="img/logo-icon.png" class="logo fixed-top" alt="Logo">
         <br>
 
         <!-- conteudo para login ou registo -->
