acho que esta pronto

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="newarrivals.html"><img src="img/Design sem nome.jpg" class="d-block w-100" alt="Slide 1"></a>
+                    <a href="newarrivals.html"><img src="img/slide2.gif" class="d-block w-100" alt="Slide 1"></a>
                 </div>
                 <div class="carousel-item">
-                    <a href="sale.html"><img src="img/Design sem nome 2.jpg" class="d-block w-100" alt="Slide 2"></a>
+                    <a href="sale.html"><img src="img/slide1.gif" class="d-block w-100" alt="Slide 2"></a>
                 </div>
                 <div class="carousel-item">
-                    <a href="topproducts.html"><img src="img/Design sem nome 3.jpg" class="d-block w-100" alt="Slide 3"></a>
+                    <a href="topproducts.html"><img src="img/slide3.gif" class="d-block w-100" alt="Slide 3"></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
