--- a/user.html
+++ b/user.html
@@ -73,7 +73,7 @@
         <br>
 
         <!-- conteudo para login ou registo -->
-        <div class="col-4 div-form-login text-center">
+        <div class="div-form-login text-center">
             <div class="text-center form-login ">
                 <form id="LoginForm" class="form-horizontal">
                     <div class="mb-3 form-group">
