--- a/sale.html
+++ b/sale.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="index.html"><b>Home</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><b>Women</b></a>
+                        <a class="nav-link" href="women.html"><b>Women</b></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="men.html"><b>Men</b></a>
