--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
             <div class="about-us-section">
                 <h2 class="about-us-title">or try one of these contact methods</h2>
                 <br>
-                <p class="about-us-text"><strong>E-mail:</strong> <a href="mailto:geral@rvs.com">geral@rvs.com</a></p>
+                <p class="about-us-text"><strong>E-mail:</strong> <a href="mailto:contact@rvs-fashion.com">contact@rvs-fashion.com</a></p>
                 <p class="about-us-text"><strong>Phone Number:</strong> 226 195 200</p>
                 <p class="about-us-text"><strong>Adress:</strong> Ciríaco Cardoso Street 186, 4150-212 Porto</p>    
             </div>
@@ -126,7 +126,7 @@
                     class="fa-brands fa-instagram"></i></a>
             <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank"><i
                     class="fa-brands fa-tiktok"></i></a>
-            <a class="socials-icon" href="mailto:geral@rvs.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+            <a class="socials-icon" href="mailto:contact@rvs-fashion.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
         </div>
         <p class="text-center">&copy; 2025 RVS Clothing</p>
     </footer>
