--- a/newarrivals.html
+++ b/newarrivals.html
@@ -144,7 +144,7 @@
                     class="fa-brands fa-instagram"></i></a>
             <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank"><i
                     class="fa-brands fa-tiktok"></i></a>
-            <a class="socials-icon" href="mailto:geral@rvs.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+            <a class="socials-icon" href="mailto:contact@rvs-fashion.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
         </div>
         <p class="text-center">&copy; 2025 RVS Clothing</p>
     </footer>
