--- a/cart.html
+++ b/cart.html
@@ -59,8 +59,6 @@
         </div>
     </nav>
 
-
-
     <div class="content">
         <!-- Banner GIF -->
     <div class="container">
@@ -94,26 +92,18 @@
         </div>
     </div>
     
-
-    
-
-
-
-    <footer class="bg-dark text-white mt-5 ">
+    <footer class="bg-dark text-white mt-5">
         <br>
         <div class="socials-container">
-            <!-- Linkedin -->
-            <a class="socials-icon" href="https://www.linkedin.com/in/goncalo-szabo-rio/" target="_blank"
-                aria-hidden="true"><i class="fab fa-linkedin-in"></i></a>
-            <!-- Github -->
-            <a class="socials-icon" href="https://github.com/SzaboRIO/" target="_blank" aria-hidden="true"><i
-                    class="fab fa-github"></i></a>
-            <!-- Mail -->
-            <a class="socials-icon" href="mailto:goncaloszabo@gmail.com" target="_blank" aria-hidden="true"><i
-                    class="fa-regular fa-envelope"></i></a>
+            <a class="socials-icon" href="https://www.facebook.com/CesaeDigital" target="_blank"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a class="socials-icon" href="https://www.instagram.com/cesae.digital/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a class="socials-icon" href="https://www.tiktok.com/@ocesaedigital" target="_blank"><i
+                    class="fa-brands fa-tiktok"></i></a>
+            <a class="socials-icon" href="mailto:contact@rvs-fashion.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
         </div>
-        <!-- Footer description -->
-        <p class="text-center">&copy; 2025 RVS</p>
+        <p class="text-center">&copy; 2025 RVS Clothing</p>
     </footer>
 
     <!-- Bootstrap script -->
